Exporting NSR ids instead of local Avinor Ids.